// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartBox error 1`] = `
<Card
  className="chart-box"
  key="2"
>
  <CardHeader>
    <CardTitle
      className="pointer panel-title"
    >
      some title
    </CardTitle>
  </CardHeader>
  <CardBody>
    <Loader
      spinnerSize="lg"
      status="PENDING"
    >
      <DonutChart
        config="regular"
        key="2-chart"
        noDataMsg="No data available"
        onclick={[Function]}
        searchUrl={null}
        title={
          Object {
            "precision": 1,
            "type": "percent",
          }
        }
        unloadData={false}
      />
      <MessageBox
        icontype="error-circle-o"
        key="2-error"
        msg="some error"
      />
    </Loader>
    <Modal
      actions={Array []}
      appendTo={[Function]}
      aria-describedby=""
      aria-label=""
      aria-labelledby=""
      className="chart-box-modal"
      hasNoBodyWrapper={false}
      isOpen={false}
      onClose={[Function]}
      ouiaSafe={true}
      showClose={true}
      title="some title"
      titleIconVariant={null}
      titleLabel=""
      variant="small"
    >
      <DonutChart
        config="regular"
        key="2-chart"
        noDataMsg="No data available"
        onclick={[Function]}
        searchUrl={null}
        title={
          Object {
            "precision": 1,
            "type": "percent",
          }
        }
        unloadData={false}
      />
    </Modal>
  </CardBody>
</Card>
`;

exports[`ChartBox pending 1`] = `
<Card
  className="chart-box"
  key="2"
>
  <CardHeader>
    <CardTitle
      className="pointer panel-title"
    >
      some title
    </CardTitle>
  </CardHeader>
  <CardBody>
    <Loader
      spinnerSize="lg"
      status="PENDING"
    >
      <DonutChart
        config="regular"
        key="2-chart"
        noDataMsg="No data available"
        onclick={[Function]}
        searchUrl={null}
        title={
          Object {
            "precision": 1,
            "type": "percent",
          }
        }
        unloadData={false}
      />
      <MessageBox
        icontype="error-circle-o"
        key="2-error"
        msg="some error"
      />
    </Loader>
    <Modal
      actions={Array []}
      appendTo={[Function]}
      aria-describedby=""
      aria-label=""
      aria-labelledby=""
      className="chart-box-modal"
      hasNoBodyWrapper={false}
      isOpen={false}
      onClose={[Function]}
      ouiaSafe={true}
      showClose={true}
      title="some title"
      titleIconVariant={null}
      titleLabel=""
      variant="small"
    >
      <DonutChart
        config="regular"
        key="2-chart"
        noDataMsg="No data available"
        onclick={[Function]}
        searchUrl={null}
        title={
          Object {
            "precision": 1,
            "type": "percent",
          }
        }
        unloadData={false}
      />
    </Modal>
  </CardBody>
</Card>
`;

exports[`ChartBox resolved 1`] = `
<Card
  className="chart-box"
  key="2"
>
  <CardHeader>
    <CardTitle
      className="pointer panel-title"
      data-placement="top"
      data-toggle="tooltip"
      onClick={[Function]}
      title="sone tooltip"
    >
      some title
    </CardTitle>
  </CardHeader>
  <CardBody>
    <Loader
      spinnerSize="lg"
      status="PENDING"
    >
      <DonutChart
        config="regular"
        data={
          Array [
            Array [
              1,
              2,
            ],
          ]
        }
        key="2-chart"
        noDataMsg="No data available"
        onclick={[Function]}
        searchUrl={null}
        title={
          Object {
            "precision": 1,
            "type": "percent",
          }
        }
        unloadData={false}
      />
      <MessageBox
        icontype="error-circle-o"
        key="2-error"
        msg="some error"
      />
    </Loader>
    <Modal
      actions={Array []}
      appendTo={[Function]}
      aria-describedby=""
      aria-label=""
      aria-labelledby=""
      className="chart-box-modal"
      hasNoBodyWrapper={false}
      isOpen={false}
      onClose={[Function]}
      ouiaSafe={true}
      showClose={true}
      title="some title"
      titleIconVariant={null}
      titleLabel=""
      variant="small"
    >
      <DonutChart
        config="regular"
        data={
          Array [
            Array [
              1,
              2,
            ],
          ]
        }
        key="2-chart"
        noDataMsg="No data available"
        onclick={[Function]}
        searchUrl={null}
        title={
          Object {
            "precision": 1,
            "type": "percent",
          }
        }
        unloadData={false}
      />
    </Modal>
  </CardBody>
</Card>
`;
